# teras_train

./: .gitignore  Cargo.toml  LICENSE  README.md
dataformat/: Cargo.toml
dataformat/src/: .lib.rs.swp  lib.rs
datagen/: Cargo.toml
datagen/src/: main.rs
dataloader/: Cargo.toml
dataloader/src/: batch.rs  feature.rs  lib.rs  loader.rs
datatools/: Cargo.toml
datatools/src/: extract.rs  main.rs  merge.rs  selfplay.rs  show.rs  shuffle.rs
train/: data.py  feature.py  main.py  model.py  test.py  train.py
