[package]
name = "datatools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dama.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
dataformat = { version = "0.1.0", path = "../dataformat" }
indicatif = "0.17.11"
bytemuck = { version = "1.23.0", features = ["derive"] }
tempfile = "3.19.1"
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["full"] }
rand_xoshiro = "0.7.0"
